# Calculator-with-GUI

./: CMakeLists.txt  ComboTest.c  Ctest.hpp  Div.cpp  Div.hpp  ETen.hpp  GUI.cpp  GUI.hpp  Mult.cpp  Mult.hpp  Pow.cpp  Pow.hpp  PowTwo.hpp  README.md  abs.hpp  add.cpp  add.hpp  base.hpp  base_calculator.cpp  base_calculator.hpp  construct.cpp  construct.hpp  cosine.hpp  e.hpp  factorial.hpp  header.h  ln.hpp  log.hpp  main.cpp  main_pipe_drafted.cpp  mod.hpp  op.hpp  rmboothTest.hpp  sine.hpp  squ_root.hpp  std_calculator.cpp  std_calculator.hpp  std_construct.cpp  std_construct.hpp  stf_calculator.cpp  (+10 more)
